--- a/home/login/esqueceu_a_senha.css
+++ b/home/login/esqueceu_a_senha.css
@@ -1,28 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Hind:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Hind:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Hind', sans-serif;
+  font-family: "Hind", sans-serif;
 }
 
 body {
-  background: linear-gradient(180deg, #000032, #0664B7);
+  background: linear-gradient(180deg, #000032, #0664b7);
   color: #fff;
   overflow-x: hidden;
 }
 
 .login_adquirir {
-    display: flex;
-    align-items: center;
-    gap: 40px;
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
 
 .login_link:hover {
-    color: #0987F7;
-    transition: all 0.3s ease 0s;
+  color: #0987f7;
+  transition: all 0.3s ease 0s;
 }
 
 .login_form {
@@ -72,7 +72,7 @@ form .txt_field {
   transform: translateY(-50%);
   font-size: 16px;
   pointer-events: none;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .txt_field img {
@@ -86,26 +86,26 @@ form .txt_field {
 }
 
 .txt_field span::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 40px;
   left: 0;
   width: 0%;
   height: 2px;
-  background: #0987F7;
-  transition: .5s;
+  background: #0987f7;
+  transition: 0.5s;
 }
 
 .txt_field input:focus~label,
 .txt_field input:valid~label {
   top: -5px;
-  color: #0987F7;
+  color: #0987f7;
 }
 
 input:focus~label,
 input:valid~label {
   top: -5px;
-  color: #0987F7;
+  color: #0987f7;
 }
 
 .txt_field input:focus~span::before,
@@ -115,7 +115,7 @@ input:valid~label {
 
 .forgot_password {
   margin: 10px 0 20px 5px;
-  color: #0987F7;
+  color: #0987f7;
   cursor: pointer;
   display: flex;
   justify-content: flex-end;
@@ -129,7 +129,7 @@ input[type="submit"] {
   width: 300px;
   height: 50px;
   border: 1px solid;
-  background: #0987F7;
+  background: #0987f7;
   border-radius: 25px;
   font-size: 18px;
   color: #e9f4fb;
@@ -140,15 +140,15 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-  border-color: #0987F7;
-  transition: .5s;
+  border-color: #0987f7;
+  transition: 0.5s;
 }
 
 input[type="button"] {
   width: 300px;
   height: 50px;
   border: none;
-  background: #E3E3E3;
+  background: #e3e3e3;
   border-radius: 25px;
   font-size: 18px;
   color: #000;
@@ -160,7 +160,7 @@ input[type="button"] {
 
 input[type="button"]:hover {
   transform: scale(1.02);
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .cancel_send {
@@ -170,7 +170,6 @@ input[type="button"]:hover {
 }
 
 @media (max-width: 768px) {
-
   .login_form {
     width: 300px;
   }
@@ -195,5 +194,4 @@ input[type="button"]:hover {
     flex-direction: column;
     gap: 0px;
   }
-
 }
