--- a/instituicao/perfil/infos_pagamento/editar/style.css
+++ b/instituicao/perfil/infos_pagamento/editar/style.css
@@ -9,8 +9,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #05204A;
-    font-family: 'Poppins', sans-serif;
+    color: #05204a;
+    font-family: "Poppins", sans-serif;
 }
 
 a {
@@ -31,17 +31,18 @@ body {
     justify-content: center;
     background-position: center center;
 }
+
 .container input {
-    background-color: #E3E3E3;
+    background-color: #e3e3e3;
     border-radius: 10px;
-    border-bottom: 1px solid #05204A;
-    padding: 15px
+    border-bottom: 1px solid #05204a;
+    padding: 15px;
 }
 
 button {
     padding: 10px;
     border: 5px solid;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 .buttons {
@@ -49,8 +50,8 @@ button {
     flex-direction: row-reverse;
 }
 
- ::placeholder {
-    font-family: 'Hind', sans-serif;
+::placeholder {
+    font-family: "Hind", sans-serif;
 }
 
 #primeiro_botao {
@@ -58,9 +59,9 @@ button {
     width: 100%;
     background-color: rgba(240, 248, 255, 0);
     color: white;
-    background-color: #C2C2C2;
+    background-color: #c2c2c2;
     border-radius: 30px;
-    padding: 15px
+    padding: 15px;
 }
 
 #segundo_botao {
@@ -70,7 +71,7 @@ button {
     color: white;
     background-color: #044177;
     border-radius: 30px;
-    padding: 15px
+    padding: 15px;
 }
 
 #icon input[type="text"] {
@@ -100,10 +101,12 @@ button {
     .container {
         padding: 50px;
     }
+
     .container h1 {
         text-align: center;
         font-size: clamp(1rem, 10vw, 4.25rem);
     }
+
     form div {
         max-width: 10px;
     }
