--- a/instituicao/turmas/style.css
+++ b/instituicao/turmas/style.css
@@ -13,7 +13,7 @@
 body {
     height: 100vh;
     position: relative;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 .container {
@@ -37,7 +37,7 @@ body {
 }
 
 .cursos_existentes input {
-    background-color: #E3E3E3;
+    background-color: #e3e3e3;
     border-radius: 10px;
     border: none;
     padding: 15px;
@@ -45,17 +45,17 @@ body {
 }
 
 .curso-select {
-    background-color: #E3E3E3;
+    background-color: #e3e3e3;
     border-radius: 10px;
-    border-bottom: 1px solid #05204A;
-    padding: 15px
+    border-bottom: 1px solid #05204a;
+    padding: 15px;
 }
 
 .lab-inp input {
-    background-color: #E3E3E3;
+    background-color: #e3e3e3;
     border-radius: 10px;
-    border-bottom: 1px solid #05204A;
-    padding: 15px
+    border-bottom: 1px solid #05204a;
+    padding: 15px;
 }
 
 .lab-inp label {
@@ -68,7 +68,7 @@ ul::-webkit-scrollbar {
 }
 
 ul::-webkit-scrollbar-thumb {
-    background-color: #05204A;
+    background-color: #05204a;
     /* color of the scroll thumb */
     border-radius: 10px;
     /* roundness of the scroll thumb */
@@ -95,7 +95,7 @@ ul::-webkit-scrollbar-thumb {
     display: none;
     flex-direction: column;
     justify-content: space-between;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     padding: 2%;
     border-radius: 20px;
     margin: 0;
@@ -121,19 +121,19 @@ ul::-webkit-scrollbar-thumb {
 }
 
 .ul-1 {
-    background-color: #E3E3E3;
+    background-color: #e3e3e3;
     width: 95%;
     border-radius: 20px;
 }
 
 .ul-2 {
-    background-color: #E3E3E3;
+    background-color: #e3e3e3;
     width: 95%;
     border-radius: 20px;
 }
 
 .modal .lab-inp-participantes input {
-    background-color: #C2C2C2;
+    background-color: #c2c2c2;
     border-radius: 10px;
     padding: 15px;
     width: 90%;
@@ -155,7 +155,7 @@ ul::-webkit-scrollbar-thumb {
 .modal h1 {
     font-size: 70px;
     font-weight: 700;
-    color: #05204A;
+    color: #05204a;
 }
 
 .professores {
@@ -167,7 +167,7 @@ ul::-webkit-scrollbar-thumb {
 .professores h1 {
     font-size: 40px;
     font-weight: 700;
-    color: #05204A;
+    color: #05204a;
 }
 
 .alunos {
@@ -179,7 +179,7 @@ ul::-webkit-scrollbar-thumb {
 .alunos h1 {
     font-size: 40px;
     font-weight: 700;
-    color: #05204A;
+    color: #05204a;
 }
 
 .bg {
@@ -201,7 +201,7 @@ ul::-webkit-scrollbar-thumb {
 ul {
     width: 100%;
     border: 2px solid;
-    border-color: #05204A;
+    border-color: #05204a;
     border-radius: 10px;
     padding: 2%;
     overflow-y: auto;
@@ -212,7 +212,7 @@ ul {
     width: 100%;
     height: 100%;
     border: 2px solid;
-    border-color: #05204A;
+    border-color: #05204a;
     border-radius: 100px;
     padding: 2%;
     overflow-y: auto;
@@ -223,7 +223,7 @@ ul {
     width: 100%;
     height: 100%;
     border: 2px solid;
-    border-color: #05204A;
+    border-color: #05204a;
     border-radius: 10px;
     padding: 2%;
     overflow-y: auto;
@@ -233,7 +233,7 @@ ul {
     margin: 1% 0;
     height: 100%;
     border: 2px solid;
-    border-color: #05204A;
+    border-color: #05204a;
     border-radius: 10px;
     padding: 2%;
     overflow-y: auto;
@@ -270,17 +270,18 @@ ul {
     width: 100%;
     height: 100%;
     border: 2px solid;
-    border-color: #05204A;
+    border-color: #05204a;
     border-radius: 10px;
     padding: 2%;
     overflow-y: auto;
 }
+
 .ul-grupo {
     margin: 1% 0;
     width: 100%;
     height: 100%;
     border: 2px solid;
-    border-color: #05204A;
+    border-color: #05204a;
     border-radius: 10px;
     padding: 2%;
     overflow-y: auto;
@@ -368,7 +369,7 @@ ul {
 
 .li h2 {
     color: #272727;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 400;
 }
 
@@ -384,9 +385,9 @@ ul {
 }
 
 .lab-inp-modal input {
-    background-color: #E3E3E3;
+    background-color: #e3e3e3;
     border-radius: 10px;
-    border-bottom: 1px solid #05204A;
+    border-bottom: 1px solid #05204a;
     padding: 15px;
     width: 100%;
 }
@@ -407,13 +408,13 @@ ul {
     font-weight: 400;
 }
 
-.tipo img{
+.tipo img {
     width: 25px;
     margin-left: 0.5vw;
     margin-top: -1.5vh;
 }
 
-.tipo{
+.tipo {
     display: flex;
     flex-direction: column;
 }
@@ -422,7 +423,7 @@ ul {
     margin-top: 2vh;
     width: 98%;
     color: white;
-    background-color: #0664B7;
+    background-color: #0664b7;
     border-radius: 30px;
     font-weight: 700;
     border: none;
@@ -437,7 +438,7 @@ ul {
     border-radius: 30px;
     border: none;
     padding: 15px;
-    background-color: #C2C2C2;
+    background-color: #c2c2c2;
     margin-right: 5%;
 }
 
@@ -465,13 +466,12 @@ ul {
     padding: 15px;
 }
 
-
 .quarto_botao {
     margin-top: 2vh;
     width: 98%;
     background-color: rgba(240, 248, 255, 0);
     color: white;
-    background-color: #A71E34;
+    background-color: #a71e34;
     border-radius: 30px;
     font-weight: 700;
     border: none;
@@ -497,7 +497,7 @@ ul {
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     border-radius: 20px;
     margin: 0;
     position: absolute;
@@ -516,7 +516,7 @@ ul {
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     border-radius: 20px;
     margin: 0;
     position: absolute;
@@ -531,7 +531,7 @@ ul {
     font-size: 40px;
     font-weight: 700;
     text-align: center;
-    color: #05204A;
+    color: #05204a;
 }
 
 .modal-excluir h2 {
@@ -539,13 +539,13 @@ ul {
     font-size: 30px;
     font-weight: 400;
     text-align: center;
-    color: #A71E34;
+    color: #a71e34;
 }
 
 .modal-excluir label {
     font-size: 30px;
     font-weight: 400;
-    color: #05204A;
+    color: #05204a;
 }
 
 .modal-excluir input {
@@ -556,7 +556,7 @@ ul {
     font-size: 40px;
     font-weight: 700;
     text-align: center;
-    color: #05204A;
+    color: #05204a;
 }
 
 .modal-excluir-membro h2 {
@@ -564,13 +564,13 @@ ul {
     font-size: 30px;
     font-weight: 400;
     text-align: center;
-    color: #A71E34;
+    color: #a71e34;
 }
 
 .modal-excluir-membro label {
     font-size: 30px;
     font-weight: 400;
-    color: #05204A;
+    color: #05204a;
 }
 
 .modal-excluir-membro input {
@@ -581,7 +581,7 @@ ul {
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -594,9 +594,8 @@ ul {
     font-size: 50px;
 }
 
-.container button{
- 
-}
+.container button {}
+
 .button5 {
     color: white;
     position: static;
@@ -629,16 +628,18 @@ ul {
         transform: translate(-50%, -50%);
         font-weight: 100;
     }
-    
+
     .container-geral {
         height: 100vh;
         width: 100vw;
         display: flex;
         flex-direction: column;
     }
+
     .book {
         display: none;
     }
+
     .container {
         flex-direction: column;
         align-items: center;
@@ -647,6 +648,7 @@ ul {
         width: 90%;
         padding: 2%;
     }
+
     body {
         height: 100vh;
         align-items: center;
@@ -654,59 +656,71 @@ ul {
         font-size: 15px;
     }
 
-    .lab-inp input{
+    .lab-inp input {
         font-size: 15px;
         height: 40px;
     }
+
     .ul {
         margin-top: 1%;
         height: 100%;
     }
+
     .li {
         display: flex;
         flex-direction: column;
     }
+
     .turma {
         font-size: clamp(0rem, 10vw, 1.5rem);
         margin-right: 5%;
     }
+
     .nome {
         margin-top: 10%;
         font-size: clamp(0rem, 10vw, 1.5rem);
     }
+
     .icon label {
         font-size: clamp(0rem, 10vw, 1.5rem);
         margin-right: 5%;
     }
+
     .modal h1 {
         font-size: clamp(0rem, 10vw, 1.5rem);
     }
+
     .modal {
         text-align: justify;
     }
 
-    .modal-grupos{
+    .modal-grupos {
         height: 80vh;
     }
 
-    .modal-grupos img{
+    .modal-grupos img {
         display: none;
     }
+
     .turma {
         display: flex;
         flex-direction: row;
         align-items: center;
     }
+
     .icone {
         display: flex;
         flex-direction: row;
     }
+
     .livro {
         display: none;
     }
+
     .icon {
         position: relative;
     }
+
     .icon i {
         position: absolute;
         right: 7%;
@@ -715,11 +729,13 @@ ul {
         color: #808080;
         transition: 0.3s;
     }
+
     .icon.inputIconBg i {
         background-color: #aaa;
         padding: 9px 4px;
         border-radius: 4px 0 0 4px;
     }
+
     .button5 {
         width: 90%;
         background-color: rgba(240, 248, 255, 0);
@@ -731,31 +747,37 @@ ul {
         padding: 15px;
         margin-bottom: 2%;
     }
+
     button {
         font-size: clamp(0rem, 10vw, 0.8rem);
     }
+
     .modal .buttons {
         display: flex;
         flex-direction: column-reverse;
     }
+
     .membro-container {
         display: flex;
         flex-direction: column;
     }
+
     .ul-professor {
         margin: 1% 0;
         width: 100%;
         height: 70%;
         border: 2px solid;
-        border-color: #05204A;
+        border-color: #05204a;
         border-radius: 10px;
         padding: 2%;
         overflow-y: auto;
     }
+
     .ul-professor li {
         display: flex;
         flex-direction: row;
     }
+
     .ul-aluno .li {
         display: flex;
         flex-direction: row;
@@ -764,15 +786,15 @@ ul {
     .iconify {
         height: 50px;
     }
+
     .ul-aluno {
         margin: 1% 0;
         width: 100%;
         height: 70%;
         border: 2px solid;
-        border-color: #05204A;
+        border-color: #05204a;
         border-radius: 10px;
         padding: 2%;
         overflow-y: auto;
     }
-
 }
