--- a/aluno/projeto_tcc/style.css
+++ b/aluno/projeto_tcc/style.css
@@ -15,12 +15,12 @@
 body {
     height: 100vh;
     width: 100vw;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     color: #272727;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;   
+    align-items: center;
     list-style: none;
 }
 
@@ -44,7 +44,7 @@ body p {
     margin-bottom: 2%;
 }
 
-.terceiro_botao{
+.terceiro_botao {
     font-size: 15px;
     width: 50%;
     background-color: rgba(240, 248, 255, 0);
@@ -55,7 +55,7 @@ body p {
     border: none;
     padding: 10px;
     margin-bottom: 5%;
- }
+}
 
 .ul-integrantes {
     display: flex;
@@ -78,7 +78,7 @@ body p {
     max-width: 100%;
     height: fit-content;
     border: 2px solid;
-    border-color: #05204A;
+    border-color: #05204a;
     border-radius: 10px;
     padding: 1%;
     margin-bottom: 2%;
@@ -118,7 +118,7 @@ body p {
     max-width: 100%;
     height: fit-content;
     border: 2px solid;
-    border-color: #05204A;
+    border-color: #05204a;
     border-radius: 10px;
     padding: 1%;
 }
@@ -137,24 +137,24 @@ body p {
     /* creates padding around scroll thumb */
 }
 
-.documentacao{
+.documentacao {
     margin-top: 2rem;
     display: flex;
     flex-direction: column;
- }
- 
- .inputfile {
-     display: none;
- }
- 
- .custom-file-upload {
+}
+
+.inputfile {
+    display: none;
+}
+
+.custom-file-upload {
     border: 1px solid #ccc;
     display: inline-block;
     padding: 6px 12px;
     cursor: pointer;
-  }
- 
- .inputfile + label {
+}
+
+.inputfile+label {
     font-size: 15px;
     width: 30%;
     background-color: rgba(240, 248, 255, 0);
@@ -166,82 +166,83 @@ body p {
     padding: 10px;
     margin-bottom: 5%;
     text-align: center;
- }
- 
- .inputfile:focus + label,
- .inputfile + label:hover {
-     background-color: #E3E3E3;
-     color: black;
- }
- .inputfile:focus + label,
- .inputfile + label:hover {
-     background-color: #E3E3E3;
-     color: black;
- }
- 
- .inputfile + label {
-     cursor: pointer; /* "hand" cursor */
- }
-.barra_progresso{
+}
+
+.inputfile:focus+label,
+.inputfile+label:hover {
+    background-color: #e3e3e3;
+    color: black;
+}
+
+.inputfile:focus+label,
+.inputfile+label:hover {
+    background-color: #e3e3e3;
+    color: black;
+}
+
+.inputfile+label {
+    cursor: pointer;
+    /* "hand" cursor */
+}
+
+.barra_progresso {
     margin-top: 2%;
     margin-bottom: 2%;
 }
 
-.primeiro_botao:hover{
-    background-color: #E3E3E3;
+.primeiro_botao:hover {
+    background-color: #e3e3e3;
     color: black;
 }
 
-.barra_progresso label{
+.barra_progresso label {
     margin-left: 2%;
     font-size: 18px;
     font-weight: 300;
 }
 
-.progress_bar{
+.progress_bar {
     background-color: #044177;
     border-radius: 100px;
     font-size: 20px;
     font-weight: 300;
 }
 
-.progress{
+.progress {
     height: 80%;
     border-radius: 100px;
 }
 
-.documentacao_div{
+.documentacao_div {
     display: flex;
     width: 100%;
 }
 
-.documentacao{
+.documentacao {
     display: flex;
     flex-direction: column;
-    width: 100%;;
+    width: 100%;
 }
 
-.documentacao label{
-    margin-bottom: 1%
+.documentacao label {
+    margin-bottom: 1%;
 }
 
-.documentacao label{
+.documentacao label {
     font-size: 18px;
     font-weight: 300;
     width: 100%;
-  
 }
 
-.documentacao .arquivo_anexado{
+.documentacao .arquivo_anexado {
     font-size: 15px;
-    font-weight: 300;  
+    font-weight: 300;
     width: 20%;
 }
 
-.documentacao .label-title{
+.documentacao .label-title {
     margin-left: 2%;
 }
-
 
 .primeiro_botao {
     font-size: 15px;
@@ -254,7 +255,6 @@ body p {
     border: none;
     padding: 10px;
     margin-bottom: 2%;
- 
 }
 
 .primeiro_botao_anexo {
@@ -270,7 +270,7 @@ body p {
     margin-bottom: 2%;
 }
 
-.editar_div{ 
+.editar_div {
     display: flex;
     flex-direction: row-reverse;
     width: 100%;
