--- a/home/compra/pagamento/pagamento.css
+++ b/home/compra/pagamento/pagamento.css
@@ -33,7 +33,7 @@ main h4 {
     display: flex;
     justify-content: space-between;
     padding: 10px;
-    border: 1px solid #C2C2C2;
+    border: 1px solid #c2c2c2;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
@@ -64,7 +64,7 @@ main h4 {
     justify-content: right;
     padding: 10px;
     align-items: center;
-    border: 1px solid #C2C2C2;
+    border: 1px solid #c2c2c2;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
@@ -80,9 +80,9 @@ form {
     flex-direction: column;
     align-items: center;
     width: 96vw;
-    background-color: #F5F6FC;
+    background-color: #f5f6fc;
     margin-left: 20px;
-    border: 1px solid #C2C2C2;
+    border: 1px solid #c2c2c2;
     border-radius: 5px;
 }
 
@@ -90,24 +90,27 @@ form input {
     height: 35px;
     border-radius: 5px;
     padding: 10px;
-    border: 2px solid #C2C2C2;
+    border: 2px solid #c2c2c2;
 }
 
 form label {
     font-weight: bold;
 }
 
-.input_dados_instituicao.erro input, .input_cartao_instituicao.erro input {
-    border: 2px solid #DB5A5A;
-} 
+.input_dados_instituicao.erro input,
+.input_cartao_instituicao.erro input {
+    border: 2px solid #db5a5a;
+}
 
-.input_dados_instituicao.sucesso input, .input_cartao_instituicao.sucesso input {
+.input_dados_instituicao.sucesso input,
+.input_cartao_instituicao.sucesso input {
     border: 2px solid #008000;
-} 
+}
 
-.input_dados_instituicao p, .input_cartao_instituicao  p {
+.input_dados_instituicao p,
+.input_cartao_instituicao p {
     visibility: hidden;
-    color: #DB5A5A;
+    color: #db5a5a;
     font-size: 13px;
 }
 
@@ -122,12 +125,13 @@ form label {
     padding: 30px;
 }
 
-.infos_instituicao, .infos_cartao {
+.infos_instituicao,
+.infos_cartao {
     gap: 20px;
 }
 
 .infos_instituicao input {
-    width: 20vw
+    width: 20vw;
 }
 
 form .infos_instituicao .input_instituicao {
@@ -143,35 +147,35 @@ form .infos_instituicao .input_instituicao {
     width: 50%;
     height: 100%;
     padding: 30px;
-    border-left: 1px solid #C2C2C2;
+    border-left: 1px solid #c2c2c2;
 }
 
 .infos_cartao input {
     width: 20vw;
 }
 
-#inputNumeroCartao, #inputNomeCartao {
+#inputNumeroCartao,
+#inputNomeCartao {
     width: 100%;
 }
 
 form input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
-input[type=number] {
+input[type="number"] {
     -moz-appearance: textfield;
-  }
+}
 
-.inputs_cartao{
+.inputs_cartao {
     display: flex;
     gap: 10px;
     width: 100%;
 }
 
-
-.infos_cartao_svg{
+.infos_cartao_svg {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -180,20 +184,23 @@ input[type=number] {
     height: 100%;
 }
 
-#cartao{
+#cartao {
     display: flex;
     flex-direction: column;
     align-items: left;
     justify-content: space-around;
-    background: rgb(51,51,51);
-    background: linear-gradient(312deg, rgba(51,51,51,1) 0%, rgba(115,115,115,1) 100%);
+    background: rgb(51, 51, 51);
+    background: linear-gradient(312deg,
+            rgba(51, 51, 51, 1) 0%,
+            rgba(115, 115, 115, 1) 100%);
     padding: 32px;
     border-radius: 20px;
     width: 350px;
     height: 175px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Courier New", Courier, monospace;
     color: white;
 }
+
 #cartao input {
     background: none;
     width: 100%;
@@ -202,67 +209,75 @@ input[type=number] {
     user-select: none;
     color: white;
 }
-#cartao input::placeholder{
+
+#cartao input::placeholder {
     color: white;
 }
-#cartao-top{
+
+#cartao-top {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-#cartao_tipo{
+
+#cartao_tipo {
     background: none;
     border: none;
     outline: none;
     width: fit-content;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Courier New", Courier, monospace;
     color: white;
 }
-#cartao_tipo:hover{
+
+#cartao_tipo:hover {
     cursor: pointer;
 }
-#cartao_tipo option{
+
+#cartao_tipo option {
     background: white;
-    font-family: 'Courier New', Courier, monospace;
-    color: rgb(51,51,51);
+    font-family: "Courier New", Courier, monospace;
+    color: rgb(51, 51, 51);
 }
-#cartao_validade{
-    letter-spacing: 5px;
-    font-weight: bold;
-    text-align: right;
-    user-select: none;
-}
-#cartao_validade::placeholder{
+
+#cartao_validade {
     letter-spacing: 5px;
     font-weight: bold;
     text-align: right;
     user-select: none;
 }
 
-#cartao_numero{
+#cartao_validade::placeholder {
+    letter-spacing: 5px;
+    font-weight: bold;
+    text-align: right;
+    user-select: none;
+}
+
+#cartao_numero {
     font-size: 18px;
     letter-spacing: 5px;
     width: 100%;
     user-select: none;
 }
-#cartao_numero::placeholder{
+
+#cartao_numero::placeholder {
     font-size: 18px;
     letter-spacing: 10px;
     user-select: none;
 }
 
-#cartao_nome{
-    letter-spacing: 5px;
-    font-size: 18px;
-    user-select: none;
-}
-#cartao_nome::placeholder{
+#cartao_nome {
     letter-spacing: 5px;
     font-size: 18px;
     user-select: none;
 }
 
+#cartao_nome::placeholder {
+    letter-spacing: 5px;
+    font-size: 18px;
+    user-select: none;
+}
 
 .btn_finalizar {
     display: flex;
@@ -270,14 +285,14 @@ input[type=number] {
     justify-content: center;
     padding-top: 30px;
     width: 100%;
-    border-top: 1px solid #C2C2C2;
+    border-top: 1px solid #c2c2c2;
 }
 
 form input[type="submit"] {
     width: 450px;
     height: 50px;
     border: 1px solid;
-    background: #0987F7;
+    background: #0987f7;
     border-radius: 25px;
     font-size: 18px;
     color: #e9f4fb;
@@ -285,25 +300,27 @@ form input[type="submit"] {
     cursor: pointer;
     outline: none;
     margin-bottom: 40px;
-  }
-  
- form input[type="submit"]:hover {
+}
+
+form input[type="submit"]:hover {
     transform: scale(1.05);
-    transition: .5s;
-  }
+    transition: 0.5s;
+}
 
-  @media (max-width: 768px) {
-
+@media (max-width: 768px) {
     main {
         align-items: center;
         padding: 50px 0;
     }
 
-    form, .infos_pagamento, main h4 {
+    form,
+    .infos_pagamento,
+    main h4 {
         margin-left: 0px;
     }
 
-    main, form input {
+    main,
+    form input {
         font-size: 13px;
     }
 
@@ -312,18 +329,19 @@ form input[type="submit"] {
         align-items: center;
         justify-content: center;
     }
-    
-    .infos_instituicao, .infos_cartao {
+
+    .infos_instituicao,
+    .infos_cartao {
         width: 100%;
     }
 
-    .infos_instituicao input, .infos_cartao input {
-        width: 40vw
+    .infos_instituicao input,
+    .infos_cartao input {
+        width: 40vw;
     }
 
     .infos_cartao {
         border-left: 0;
-        border-top: 1px solid #C2C2C2;
+        border-top: 1px solid #c2c2c2;
     }
-
-  }
+}
