--- a/home/compra/planos.css
+++ b/home/compra/planos.css
@@ -1,4 +1,5 @@
-header, main {
+header,
+main {
     background-color: #000032;
 }
 
@@ -18,7 +19,7 @@ main {
 }
 
 main h4 {
-    color: #0987F7;
+    color: #0987f7;
     font-size: 21px;
     margin-top: 5vh;
 }
@@ -59,12 +60,12 @@ main h1 {
 
 .tipo_plano ul li:hover,
 .tipo_plano ul li.ativo {
-    background-color: #49A6F9;
+    background-color: #49a6f9;
     color: #fff;
 }
 
 .preco_plano p {
-    color: #1C2348;
+    color: #1c2348;
 }
 
 .form_plano {
@@ -83,7 +84,7 @@ main h1 {
     align-items: center;
     width: 500px;
     justify-content: center;
-    border-bottom: 2px solid #ECEDF1;
+    border-bottom: 2px solid #ecedf1;
 }
 
 .valor_plano {
@@ -104,7 +105,7 @@ main h1 {
 }
 
 .recorrencia_pagamento .recorrencia {
-    color: #A4A5AA;
+    color: #a4a5aa;
 }
 
 .preco_plano .titulo {
@@ -113,7 +114,7 @@ main h1 {
 }
 
 .infos_plano {
-    color: #1C2348;
+    color: #1c2348;
 }
 
 .infos_plano ul {
@@ -149,7 +150,7 @@ ul li {
     width: 500px;
     height: 50px;
     border: 1px solid;
-    background: #0987F7;
+    background: #0987f7;
     border-radius: 25px;
     font-size: 18px;
     color: #e9f4fb;
@@ -157,23 +158,21 @@ ul li {
     cursor: pointer;
     outline: none;
     margin-bottom: 40px;
-  }
-  
-  .form_plano input[type="button"]:hover {
-    color: #0987F7;
-    background-color: #fff;
-    transition: .3s;
-  }
-  
-  @media (max-width: 768px) {
+}
 
+.form_plano input[type="button"]:hover {
+    color: #0987f7;
+    background-color: #fff;
+    transition: 0.3s;
+}
+
+@media (max-width: 768px) {
     main h4 {
         font-size: 15px;
     }
 
     main h1 {
         font-size: 28px;
-
     }
 
     .tipo_plano ul li {
@@ -204,15 +203,12 @@ ul li {
         font-size: 30px;
     }
 
-
     .infos_plano ul {
         width: 290px;
     }
 
-    
     .infos_plano ul li .texto {
         font-size: 14px;
         max-width: 250px;
     }
-  }
-
+}
