--- a/home/login/login.css
+++ b/home/login/login.css
@@ -1,17 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Hind:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Hind:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Hind', sans-serif;
+  font-family: "Hind", sans-serif;
 }
 
 body {
   /* width: 100vw;
   height: 100vh; */
-  background: linear-gradient(180deg, #000032, #0664B7);
+  background: linear-gradient(180deg, #000032, #0664b7);
   color: #fff;
   overflow-x: hidden;
 }
@@ -58,7 +58,7 @@ form .txt_field {
   transform: translateY(-50%);
   font-size: 16px;
   pointer-events: none;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .txt_field img {
@@ -72,26 +72,26 @@ form .txt_field {
 }
 
 .txt_field span::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 40px;
   left: 0;
   width: 0%;
   height: 2px;
-  background: #0987F7;
-  transition: .5s;
+  background: #0987f7;
+  transition: 0.5s;
 }
 
 .txt_field input:focus~label,
 .txt_field input:valid~label {
   top: -5px;
-  color: #0987F7;
+  color: #0987f7;
 }
 
 input:focus~label,
 input:valid~label {
   top: -5px;
-  color: #0987F7;
+  color: #0987f7;
 }
 
 .txt_field input:focus~span::before,
@@ -101,7 +101,7 @@ input:valid~label {
 
 .forgot_password {
   margin: 10px 0 20px 5px;
-  color: #0987F7;
+  color: #0987f7;
   cursor: pointer;
   display: flex;
   justify-content: flex-end;
@@ -115,7 +115,7 @@ input[type="submit"] {
   width: 300px;
   height: 50px;
   border: 1px solid;
-  background: #0987F7;
+  background: #0987f7;
   border-radius: 25px;
   font-size: 18px;
   color: #e9f4fb;
@@ -126,12 +126,11 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-  border-color: #0987F7;
-  transition: .5s;
+  border-color: #0987f7;
+  transition: 0.5s;
 }
 
 @media (max-width: 768px) {
-
   .login_form {
     width: 300px;
   }
@@ -143,5 +142,4 @@ input[type="submit"]:hover {
   input[type="submit"] {
     width: 230px;
   }
-
 }
