--- a/home/style.css
+++ b/home/style.css
@@ -1,103 +1,103 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box; 
- }
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+}
 
- body{
-    width: 100vw;
-    height: 100vh;
-    background: url('./images-global/background.svg');
-    background-blend-mode: darken;
-    background-color: rgba(0, 0, 0, 0.452);
-    background-position: center center;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    cursor: default;
- }
+body {
+   width: 100vw;
+   height: 100vh;
+   background: url("./images-global/background.svg");
+   background-blend-mode: darken;
+   background-color: rgba(0, 0, 0, 0.452);
+   background-position: center center;
+   background-size: cover;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   cursor: default;
+}
 
- main{
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
- }
+main {
+   color: white;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   text-align: center;
+}
 
- .container{
+.container {
    max-width: 1200px;
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
- }
+}
 
- main h1{
+main h1 {
    font-weight: 700;
    font-size: 120px;
-   font-family: 'Poppins', sans-serif;
+   font-family: "Poppins", sans-serif;
    animation: go-back 3s;
 }
 
-@keyframes go-back{
+@keyframes go-back {
    0% {
       transform: translateX(-100px);
-  }
-  100% {
+   }
+
+   100% {
       transform: translateX(0);
-  }
+   }
 }
 
- main h2{
+main h2 {
    margin: 3%;
    font-size: 50px;
    font-weight: 400;
-   font-family: 'Poppins', sans-serif;
- }
+   font-family: "Poppins", sans-serif;
+}
 
- main .botao{
-   font-family: 'Poppins', sans-serif;
+main .botao {
+   font-family: "Poppins", sans-serif;
    font-weight: 600;
    font-size: 35px;
    max-width: 26vw;
    border: 5px solid;
    background-color: rgba(240, 248, 255, 0);
    color: white;
-   border-color: #0987F7;
+   border-color: #0987f7;
    border-radius: 10px;
    padding: 1% 3%;
    transition: all 0.5s ease-in-out;
- }
+}
 
- main .botao:hover{
-      box-shadow: 0 0 10px 0 #0987F7 inset, 0 0 10px 4px #0987F7;
-      cursor: pointer;
- }
+main .botao:hover {
+   box-shadow: 0 0 10px 0 #0987f7 inset, 0 0 10px 4px #0987f7;
+   cursor: pointer;
+}
 
- @media (max-width: 1200px) {
-    .container{
+@media (max-width: 1200px) {
+   .container {
       max-width: 1100px;
-    }
+   }
 
-   main h1{
-      font-size: clamp(1rem, 10vw, 6.25rem); 
+   main h1 {
+      font-size: clamp(1rem, 10vw, 6.25rem);
    }
-  
-   main h2{
+
+   main h2 {
       margin: 5%;
-      font-size: clamp(0.5rem, 5vw, 2.6rem); 
+      font-size: clamp(0.5rem, 5vw, 2.6rem);
    }
-  
-   .botao{
+
+   .botao {
       font-size: 5px;
       width: clamp(21.8rem, 10vw, 21rem);
    }
 
-   .botao p{
+   .botao p {
       font-size: clamp(0.4rem, 2.5vw, 2.6rem);
    }
 }
-
