--- a/instituicao/componentes/side_menu/style.css
+++ b/instituicao/componentes/side_menu/style.css
@@ -1,108 +1,107 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box; 
- }
-
- body{
-    width: 35vw;
-    height: 100vh;
-    display: flex;
-    color: white;    
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
 }
 
-.menu{
-    display: flex;
-    flex-direction: column; 
-    justify-content: space-between;
-    background-color: hsl(208, 93%, 24%);
-    padding: 5vw 0vh 2vh 2vh;
-    font-family: 'Poppins', sans-serif;
-    position: relative; 
-    font-size: 15px;
- }
+body {
+   width: 35vw;
+   height: 100vh;
+   display: flex;
+   color: white;
+}
 
- .titulo{
+.menu {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   background-color: hsl(208, 93%, 24%);
+   padding: 5vw 0vh 2vh 2vh;
+   font-family: "Poppins", sans-serif;
+   position: relative;
+   font-size: 15px;
+}
+
+.titulo {
    display: flex;
    align-items: center;
    flex-direction: column;
    padding: 0vw 2vh 0vh 0vh;
-  
- }
+}
 
- .titulo img{
+.titulo img {
    width: 300px;
- }
+}
 
-.opcoes div{
+.opcoes div {
    padding: 0vw 2vh 0vh 0vh;
- }
+}
 
-#cursos_existentes_img{
+#cursos_existentes_img {
    margin-right: 3%;
 }
 
- .cursos_existentes{
+.cursos_existentes {
    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: 0px 0px 10% 10px;
+   flex-direction: row;
+   align-items: center;
+   margin: 0px 0px 10% 10px;
 }
 
-#cursos_existentes_img{
+#cursos_existentes_img {
    margin-right: 3%;
 }
 
- .adicionar_novo_curso {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: 0px 0px 10% 10px;
- }
+.adicionar_novo_curso {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   margin: 0px 0px 10% 10px;
+}
 
- #adicionar_novo_curso_img{
+#adicionar_novo_curso_img {
    margin-right: 3%;
 }
 
- .turmas_existentes {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: 0px 0px 10% 10px;
- }
+.turmas_existentes {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   margin: 0px 0px 10% 10px;
+}
 
- #turmas_existentes_img{
+#turmas_existentes_img {
    margin-right: 3%;
 }
 
- .criar_nova_turma {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: 0px 0px 10% 10px;
- }
+.criar_nova_turma {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   margin: 0px 0px 10% 10px;
+}
 
-#criar_nova_turma_img{
+#criar_nova_turma_img {
    margin-right: 3%;
 }
 
- .usuarios_cadastrados {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
- }
+.usuarios_cadastrados {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+}
 
- #usuarios_cadastrados_img{
+#usuarios_cadastrados_img {
    margin-right: 3%;
 }
 
- .sair {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: 0px 0px 0px 10px;
- }
+.sair {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   margin: 0px 0px 0px 10px;
+}
 
-#sair_img{
+#sair_img {
    margin-right: 3%;
 }
