--- a/instituicao/componentes/side_menu_video/styles_side_menu.css
+++ b/instituicao/componentes/side_menu_video/styles_side_menu.css
@@ -1,5 +1,5 @@
 /* Google Font Link */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 
 * {
     margin: 0;
@@ -122,7 +122,7 @@
 }
 
 .sidebar li a:hover {
-    background: #FFF;
+    background: #fff;
 }
 
 .sidebar li a .links_name {
