--- a/instituicao/perfil/infos_pagamento/style.css
+++ b/instituicao/perfil/infos_pagamento/style.css
@@ -9,8 +9,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #05204A;
-    font-family: 'Poppins', sans-serif;
+    color: #05204a;
+    font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -23,21 +23,20 @@ body {
 }
 
 .container input {
-    background-color: #E3E3E3;
+    background-color: #e3e3e3;
     border-radius: 10px;
-    border-bottom: 1px solid #05204A;
-    padding: 15px
+    border-bottom: 1px solid #05204a;
+    padding: 15px;
 }
-
 
 button {
     padding: 10px;
     border: 5px solid;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
- ::placeholder {
-    font-family: 'Hind', sans-serif;
+::placeholder {
+    font-family: "Hind", sans-serif;
 }
 
 .buttons {
@@ -72,17 +71,19 @@ a:hover {
     color: white;
     background-color: #c2c2c2;
     border-radius: 30px;
-    padding: 15px
+    padding: 15px;
 }
 
 @media (max-width: 1200px) {
     .container {
         padding: 50px;
     }
+
     .container h1 {
         text-align: center;
         font-size: clamp(1rem, 10vw, 4.25rem);
     }
+
     form div {
         max-width: 10px;
     }
