--- a/professor/componentes/side_menu/styles_side_menu.css
+++ b/professor/componentes/side_menu/styles_side_menu.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 
 * {
     margin: 0;
@@ -120,7 +120,7 @@
 }
 
 .sidebar li a:hover {
-    background: #FFF;
+    background: #fff;
 }
 
 .sidebar li a .links_name {
