--- a/professor/perfil/editar/editar_perfil.css
+++ b/professor/perfil/editar/editar_perfil.css
@@ -10,8 +10,8 @@
     font-weight: 700;
     flex-direction: column;
     align-items: center;
-    color: #05204A;
-    font-family: 'Poppins', sans-serif;
+    color: #05204a;
+    font-family: "Poppins", sans-serif;
     margin-bottom: 60px;
 }
 
@@ -25,9 +25,9 @@ body {
 }
 
 .container input {
-    background-color: #E3E3E3;
+    background-color: #e3e3e3;
     border-radius: 10px;
-    border-bottom: 1px solid #05204A;
+    border-bottom: 1px solid #05204a;
     padding: 15px;
 }
 
@@ -82,17 +82,17 @@ body {
 }
 
 .container .upload_foto .btn_upload_foto:active {
-    background: #0987F7;
+    background: #0987f7;
 }
 
 button {
     padding: 10px;
     border: 5px solid;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
- ::placeholder {
-    font-family: 'Hind', sans-serif;
+::placeholder {
+    font-family: "Hind", sans-serif;
 }
 
 #primeiro_botao {
@@ -100,7 +100,7 @@ button {
     width: 100%;
     background-color: rgba(240, 248, 255, 0);
     color: white;
-    background-color: #C2C2C2;
+    background-color: #c2c2c2;
     border-radius: 30px;
     padding: 15px;
 }
@@ -129,14 +129,15 @@ a:hover {
     background-color: #044177;
     border-radius: 30px;
     padding: 15px;
-    border: #05204A;
+    border: #05204a;
 }
 
-#space{
-    width:90%;
+#space {
+    width: 90%;
     margin-left: 0 20% 0 10%;
     padding: 50px;
 }
+
 #icon input {
     padding-right: 50px;
 }
@@ -161,7 +162,6 @@ a:hover {
 }
 
 @media (max-width: 768px) {
-
     .container h1 {
         font-size: 50px;
     }
@@ -171,7 +171,7 @@ a:hover {
         height: 100px;
     }
 
-    #space{
-        width:70%;
+    #space {
+        width: 70%;
     }
 }
