--- a/professor/cursos/turmas/turmas.css
+++ b/professor/cursos/turmas/turmas.css
@@ -97,7 +97,7 @@ ul::-webkit-scrollbar-thumb {
 #modal-criar-grupo,
 #modal-excluir-grupo {
     width: 100%;
-    height: 50vh;
+    height: 60vh;
     background-color: rgb(255, 255, 255);
     display: none;
     flex-direction: column;
@@ -111,17 +111,31 @@ ul::-webkit-scrollbar-thumb {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+    overflow: hidden;
 }
 
 #modal-excluir-grupo {
-    width: 40%;
+    width: 60%;
     height: 30vh;
     align-items: center;
     font-weight: 100;
 }
 
-#modal-turma {
-    height: 40vh;
+#modal-excluir-grupo h1 {
+    font-size: 50px;
+}
+
+#modal-excluir-grupo h2 {
+    font-size: 30px;
+    color: #a71e34;
+}
+
+#modal-excluir-grupo #btnConfirmarExclusao {
+    background-color: #a71e34;
+}
+
+#modal-turma, #modal-criar-grupo {
+    height: 50vh;
 }
 
 .g-7 input {
